--- a/index.html
+++ b/index.html
@@ -1,77 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cynoops - Search & Rescue</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#mission">Mission</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#open-source">Open Source</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section id="hero">
-      <h1>cynoops - search and rescue work with dogs, reimagined</h1>
-    </section>
-
-    <section id="about">
-      <h2>About</h2>
-      <p>Cynoops focuses on bringing modern technology and streamlined workflows to canine search and rescue teams.</p>
-    </section>
-
-    <section id="mission">
-      <h2>Mission</h2>
-      <p>cynoops is here to streamline search & rescue work with dogs.</p>
-    </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
-      <ul>
-        <li>Website</li>
-        <li>The "me" project</li>
-        <li>Operational command center</li>
-        <li>Dog wearables</li>
-        <li>Training tools</li>
-      </ul>
-    </section>
-
-    <section id="team">
-      <h2>Team</h2>
-      <ul>
-        <li>Member One</li>
-        <li>Member Two</li>
-        <li>Member Three</li>
-      </ul>
-    </section>
-
-    <section id="open-source">
-      <h2>Open Source</h2>
-      <p>All code &amp; hardware is open source.</p>
-    </section>
-  </main>
-
-  <footer>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#mission">Mission</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#open-source">Open Source</a></li>
-      </ul>
-    </nav>
-    <p>&copy; 2024 cynoops</p>
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CYNOOPS | Search &amp; Rescue Platform</title>
+    <meta
+      name="description"
+      content="CYNOOPS connects Tracker and Command for free, mission-ready search and rescue coordination."
+    />
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/main.jsx"></script>
+  </body>
 </html>
